<resources>
    <string name="app_name">openMAL</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="seasonal">Seasonal</string>
    <string name="profile">Profile</string>
    <string name="anime_image_thumbnail">Anime image thumbnail</string>
    <string name="library">Library</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="edit_list">Edit list entry</string>
    <string name="empty_string" />
    <string name="anime_episodes_and_rating">
    {episodes, plural,
        =0 {? ep}
        other {{episodes, number} ep}
    }{duration, select,
        0 {}
        other {, {duration, number} min}
    }
    </string>
    <string name="on_hiatus">On Hiatus</string>
    <string name="anime_currently_airing">Currently Airing</string>
    <string name="anime_finished">Finished Airing</string>
    <string name="anime_not_yet_released">Not yet released</string>
    <string name="ranked_text">Ranked #%1$d</string>
    <string name="manga_currently_publishing">Currently Publishing</string>
    <string name="manga_finished">Finished Publishing</string>
    <string name="manga_not_yet_released">Not yet published</string>
    <string name="popularity_text">Popularity #%1$d</string>
    <string name="members_text">Members %1$d </string>
    <string name="score_text">%1$.2f</string>
    <string name="score_prefix">Score:\ </string>
    <string name="start_end_date_format">%1$s - %2$s</string>
    <string name="broadcast_time_format">%1s, %2s JST</string>
    <string name="unknown">Unknown</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="other">Other</string>
    <string name="original">Original</string>
    <string name="manga">Manga</string>
    <string name="four_koma_manga">4-Koma Manga</string>
    <string name="web_manga">Web Manga</string>
    <string name="digital_manga">Digital Manga</string>
    <string name="novel">Novel</string>
    <string name="light_novel">Light Novel</string>
    <string name="visual_novel">Visual Novel</string>
    <string name="game">Game</string>
    <string name="card_game">Card Game</string>
    <string name="book">Book</string>
    <string name="picture_book">Picture Book</string>
    <string name="radio">Radio</string>
    <string name="music">Music</string>
    <string name="manga_chapters_count">%1s Chapters</string>
    <string name="one_shot">One Shot</string>
    <string name="doujinshi">Doujinshi</string>
    <string name="manhwa">Manhwa</string>
    <string name="manhua">Manhua</string>
    <string name="oel">Original English Language (OEL)</string>
    <string name="tv">TV</string>
    <string name="ova">OVA</string>
    <string name="movie">Movie</string>
    <string name="special">Special</string>
    <string name="ona">ONA</string>
    <string name="air_period">Air period</string>
    <string name="publishing_period">Publishing period</string>
    <string name="related_anime">Related Anime</string>
    <string name="related_manga">Related Manga</string>
    <string name="work_not_in_lib">This work does not exist in your library</string>
    <string name="add">Add</string>
    <string name="score_given_format">%1$d/10</string>
    <string name="progress_format">%s / %s</string>
    <string name="rate">Rate</string>
    <string name="currently_watching">Currently watching</string>
    <string name="currently_reading">Currently reading</string>
    <string name="finished_watching">Finished watching</string>
    <string name="finished_reading">Finished reading</string>
    <string name="on_hold">On hold</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_watch">Planning to watch</string>
    <string name="plan_to_read">Planning to read</string>
    <string name="rate_anime">Rate the anime</string>
    <string name="rate_manga">Rate the Manga</string>
    <string name="login_to_view">Login to view library status</string>
    <string name="login">Login</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="notes">Notes</string>
    <string name="delete_from_list">Delete from list</string>
    <string name="save">Save</string>
    <string name="watch_status">Watch status</string>
    <string name="reading_status">Reading status</string>
    <string name="episodes_watched">Episodes watched</string>
    <string name="chapters_read">Chapters read</string>
    <string name="rating">Rating</string>
    <string name="rate_work">Rate the work</string>
    <string name="start_and_finish_dates">Start and finish dates</string>
    <string name="completed">Completed</string>
    <string name="divider"> / %s</string>
    <string name="select_a_start_date">Select a start date</string>
    <string name="score_1_10_appalling">1/10, Appalling</string>
    <string name="score_2_10_horrible">2/10, Horrible</string>
    <string name="score_3_10_very_bad">3/10, Very Bad</string>
    <string name="score_4_10_bad">4/10, Bad</string>
    <string name="score_5_10_average">5/10, Average</string>
    <string name="score_6_10_fine">6/10, Fine</string>
    <string name="score_7_10_good">7/10, Good</string>
    <string name="score_8_10_very_good">8/10, Very Good</string>
    <string name="score_9_10_great">9/10, Great</string>
    <string name="score_10_10_masterpiece">10/10, Masterpiece!</string>
    <string name="anime_url_template">https://myanimelist.net/anime/%1$d</string>
    <string name="manga_url_template">https://myanimelist.net/manga/%1$d</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="add_to_library">Add to library</string>
    <string name="deleting_work">"Deleting work from library … "</string>
    <string name="adding_work">Adding work to library …</string>
    <string name="add_or_remove_library">Add or remove from library.</string>
    <string name="network_error_message">Error %1$d, %2$s</string>
    <string name="bad_request">Bad request</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="forbidden">Forbidden</string>
    <string name="not_found">Not found</string>
    <string name="netowork_error_occurred">Network error occurred</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="check_internet">Error occurred, check your internet connection</string>
    <string name="work_deleted_from_library">Work deleted from library</string>
    <string name="failed_to_remove_work_from_library">Failed to remove work from library. An error occurred.</string>
    <string name="refreshing">Refreshing…</string>
    <string name="work_added_to_library">Work added to library</string>
    <string name="failed_to_add_work_to_library">Failed to add work to library. An error occurred</string>
    <string name="anime_stats_entries">%1$s : %2$d entries</string>
    <string name="anime_stats_entries_episodes">All Anime: %1$d entries, %2$d episodes</string>
    <string name="all">All</string>
    <string name="currently_reading_manga">Manga currently reading</string>
    <string name="finished_reading_manga">Manga finished reading</string>
    <string name="on_hold_manga">Manga on hold</string>
    <string name="dropped_manga">Manga dropped</string>
    <string name="plan_to_manga">Manga planning to read</string>
    <string name="all_manga">All Manga</string>
    <string name="all_anime">All Anime</string>
    <string name="currently_watching_anime">Anime currently watching</string>
    <string name="finished_watching_anime">Completed Anime</string>
    <string name="on_hold_anime">Anime on hold</string>
    <string name="dropped_anime">Dropped Anime</string>
    <string name="plan_to_watch_anime">Anime planning to watch</string>
    <string name="search_anime_and_manga">Search anime and manga</string>
    <string name="search">Search</string>
    <string name="also_known_as">Also known as: %1$s</string>
    <string name="top_airing_anime">Top Airing Anime</string>
    <string name="top_anime_tv_series">Top Anime TV Series</string>
    <string name="top_anime_specials">Top Anime Specials</string>
    <string name="top_anime_by_popularity">Top Anime by Popularity</string>
    <string name="top_upcoming_anime">Top Upcoming Anime</string>
    <string name="suggested_anime">Suggested Anime</string>
    <string name="top_manga">Top Manga</string>
    <string name="top_novels">Top Novels</string>
    <string name="top_one_shots">Top One-Shots</string>
    <string name="most_popular">Most popular</string>
    <string name="most_favorited">Most Favorited</string>
    <string name="top_doujin">Top Doujinshi</string>
    <string name="anime">Anime</string>
    <string name="rate_this_anime">Rate this Anime</string>
    <string name="library_status">Library status</string>
    <string name="air_date">Air Date</string>
    <string name="broadcasts_on">Broadcasts on</string>
    <string name="source">Source</string>
    <string name="studios">Studios</string>
    <string name="content_rating">Content rating</string>
    <string name="login_to_view_your_profile">Login to view your profile</string>
    <string name="sort_by">Sort By</string>
    <string name="title">Title</string>
    <string name="score">Score</string>
    <string name="last_updated">Last updated</string>
    <string name="start_date">Start date</string>
    <string name="filter">filter</string>
    <string name="attempting_login">Attempting login…</string>
    <string name="login_error_occured">Login error occurred</string>
    <string name="go_back">GO back</string>
    <string name="no_browser_found">No browser found</string>
    <string name="settings">Settings</string>
    <string name="enable_nsfw">Enable NSFW</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="preferred_title_language">Preferred work title language</string>
    <string name="default_style">Default style</string>
    <string name="romaji">Romaji</string>
    <string name="search_default_order">Default order</string>
    <string name="search_score_order">Order by score</string>
    <string name="search_airing_date_order">Airing date</string>
    <string name="work_thumbnail_image">Work thumbnail image</string>
    <string name="anime_release_season">%s %s</string>
    <string name="rating_star">%.1f★</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="no_results_found">No results found :(</string>
    <string name="confirm">Confirm</string>

    <string name="g_rating">G - All Ages</string>
    <string name="pg_rating">PG - Children</string>
    <string name="pg_13_rating">PG-13 - Teens 13 and Older</string>
    <string name="r_rating">R - 17+ (Violence &amp; Profanity)</string>
    <string name="r_plus_rating">R+ - Profanity &amp; Mild Nudity</string>
    <string name="rx_rating">Rx - Hentai</string>
    <string name="synopsys">Synopsys</string>
    <string name="characters">Characters</string>
    <string name="character_image">Character image</string>
    <string name="description">Description</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="character_age">Age: %1s</string>
    <string name="character_gender">Gender: %1s</string>
</resources>